# AED_PROJECT_G81

./: .gitignore  CMakeLists.txt  LeicClass.cpp  LeicClass.h  Request.cpp  Request.h  Schedule.cpp  Schedule.h  Script.cpp  Script.h  Student.cpp  Student.h  UC.cpp  UC.h  UC_class.cpp  UC_class.h  main.cpp
docs/: Doxyfile
